--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Requirements: Python (http://python.org/)
 
 ==== About ====
 This is a small library which lets you validate structures, something like
-DTD for XML, except scturcture' scheme is valid python code and made of
+DTD for XML, except structure' scheme is valid python code and made of
 valid python objects.
 
 ==== Why ====
@@ -12,7 +12,7 @@ I needed something to perform validation of json objects we use in our
 project at work.
 
 ==== License ====
-See LICENSE file, which in the same directory as this README
+See LICENSE file in the same directory as this README
 
 ==== Help? Documentation? ====
 At the moment of initial commit, there are 40 tests. The day you are reading
