--- a/README.textile
+++ b/README.textile
@@ -1,23 +1,30 @@
 Copyright (c) 2008 by Konstantin Merenkov <kmerenkov@gmail.com>
+
 Project's homepage: http://github.com/kmerenkov/struct_validator/tree/master
 
-==== About ====
+h2. About
+
 This is a small library which lets you validate structures, something like
 DTD for XML, except structure' scheme is valid python code and made of
 valid python objects.
 
-==== Why ====
+h2. Why
+
 I needed something to perform validation of json objects we use in our
 project at work.
 
-==== License ====
+h2. License
+
 See LICENSE file in the same directory as this README
 
-==== Help? Documentation? ====
+h2. Help? Documentation?
+
 At the moment of initial commit, there are 40 tests. The day you are reading
 this text maybe even more.
 You can get idea of how to use it from test cases.
+You might also want to check wiki of project's homepage
 
-==== Other ====
+h2. Other
+
 This library is probably far from being bug-free. It took me few hours to
 complete it.
